# matrix-calculator

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  main.cpp  matrix.cpp
.github/workflows/: CI.yml
generator/: CMakeLists.txt  generator.cpp  generator.hpp
matrix/: CMakeLists.txt  matrix.cpp  matrix.hpp
rowcolumn/: CMakeLists.txt  rowcolumn.cpp  rowcolumn.hpp
rowcolumnlist/: CMakeLists.txt  rowcolumnlist.cpp  rowcolumnlist.hpp
slice/: CMakeLists.txt  slice.cpp  slice.hpp
tests/: CMakeLists.txt  test_matrix.cpp
